<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_register"
        android:textColor="@color/purple_700"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/registrationLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_username"
        android:layout_marginHorizontal="16dp"
        android:inputType="text"
        android:autofillHints="username" />

    <EditText
        android:id="@+id/registrationPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_password"
        android:layout_marginHorizontal="16dp"
        android:inputType="textPassword"
        android:autofillHints="password" />

    <EditText
        android:id="@+id/registrationPasswordRepeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/repeat_password"
        android:layout_marginHorizontal="16dp"
        android:inputType="textPassword"
        android:autofillHints="password" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="10dp"
            android:text="@string/btn_register"/>

    </LinearLayout>

</LinearLayout>